bug fixes, flickering annotations

--- a/docs/style.css
+++ b/docs/style.css
@@ -21,6 +21,21 @@ canvas {
     transition: opacity 0.5s;
 }
 
+.annotation::before {
+    content: "1";
+    position: absolute;
+    top: -30px;
+    left: -30px;
+    width: 30px;
+    height: 30px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    font-size: 16px;
+    line-height: 30px;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.8);
+}
+
 #number {
     position: absolute;
     z-index: -1;
